--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,4 +12,4 @@
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
             'http://rubyonrails.org/' %>
-<%= link_to image_tag("kitten.png", alt: "kitten picture") %>
+<%#=  image_tag("kitten.png", alt: "kitten picture") %>
